--- a/src/CWT.APP/CWT.Web/cwt-web-app/src/App.css
+++ b/src/CWT.APP/CWT.Web/cwt-web-app/src/App.css
@@ -37,3 +37,9 @@
     transform: rotate(360deg);
   }
 }
+.CenterDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
